src/test/ui/issues/issue-1XXXX/issue-18058.stderr
error[E0412]: cannot find type `Undefined` in this scope
  --> $DIR/issue-18058.rs:1:6
   |
LL | impl Undefined {}
   |      ^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
